WebCore: WebKit plugins are not rendered during printing. https://bugs.webkit.org/show_bug.cgi?id=33022.

Reviewed by Adam Roben.

* plugins/win/PluginViewWin.cpp:
(WebCore::PluginView::paintWindowedPluginIntoContext): Tell
  cairo printing surface to flush so that blank regions do
  not write over the plugin's paint operations.
* rendering/RenderLayer.cpp: Build fix.
(WebCore::RenderLayer::beginTransparencyLayers): Correct
  method signature missing for ColorSpace.

WebKit/win: Use correct cairo surface data type for handling print operations.
https://bugs.webkit.org/show_bug.cgi?id=33022.

Reviewed by Adam Roben.

* WebFrame.cpp:
(scaleFactor): Handle 'scale = 0' case.
(WebFrame::spoolPage): Use scaleFactor helper function.  Account for
 margin size in region passed to header/footer routines.
(WebFrame::spoolPages): Properly clean up Cairo surface.



Canonical link: https://commits.webkit.org/44407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52995 268f45cc-cd09-0410-ab3c-d52691b4dbfc